contributions and distances to enable new types of reprojections.  This also
cleaned up and unified handling of effective ray lengths throughout code.

Bug fixes from Jan Wienold for evalglare.

Changed indexed (numbered) output from dctimestep to start from 0 rather
than 1, to make it more consistent with expected input naming.

Increased default sampling in bsdf2klems (-n option) to 1024.

Fixed an issue noticed by David G-M that was causing genBSDF to bias
isotropic tensor tree samples resulting in subsequent failure of
peak extraction with "aBSDF" type.

Introduced max() and min() functions to .cal library.

Added random incident patch sampling to bsdf2klems to improve accuracy
with scattering interpolation representation input (e.g., from
pabopto2bsdf).  The other input types already sampled incident patch area.

Added gendaymtx -A option to compute average sky over all the input
time steps.

Added ability to output color image from rtrace with any of -ovrx options.

Changed rlam behavior so -iaN reads N lines from a stream rather than N
characters.  This seems more useful, since -ibN is somewhat redundant with
the old behavior.

Created rsplit program as compliment to rlam and to handle more complex
rtrace output into separate files or streams.

Improved getinfo so that it can also hop over resolution string with -c
and header elide mode.

Made pvalue -u option mean "uncompressed" with -r.  Also, allow skipping
bytes on standard input.

Created rcode_depth tool to convert to and from a 16-bit/pixel portable
depth image encoding that uses a mix of linear and reciprocal distance
with explicit representations of 0 and infinity.  Code for loading these
depth maps is in src/util/depthcodec.{h,c}.

Created rcode_norm tool to conver to and from 32-bit/pixel portable
surface normal representation, matching the one in src/common/dircode.c.
Code for loading normal maps is in src/util/normcodec.{h,c}.