@@ -1,4 +1,4 @@
-# RCSid: $Id: Rmakefile,v 2.90 2019/07/19 02:18:44 greg Exp $
+# RCSid: $Id: Rmakefile,v 2.91 2019/07/19 22:25:03 greg Exp $
 #
 # Radiance makefile for utility programs
 #
@@ -22,7 +22,7 @@ LIBDIR = /usr/local/lib/ray
 PROGS = findglare glarendx rpiece rad ranimate ranimove vwright getinfo \
 		vwrays xglaresrc rsensor dctimestep rttree_reduce rcollate \
 		eplus_adduvf rfluxmtx rmtxop wrapBSDF evalglare radcompare \
-		rcode_depth rcode_norm
+		rcode_depth rcode_norm rcode_ident
 
 LIBFILES = rambpos.cal ambpos.cal tregsamp.dat reinhartb.cal \
 klems_full.cal klems_half.cal klems_quarter.cal disk2square.cal \
@@ -153,6 +153,9 @@ rcode_norm:	rcode_norm.o normcodec.o
 	$(CC) $(CFLAGS) -o rcode_norm rcode_norm.o normcodec.o \
 -lrtrad $(MLIB)
 
+rcode_ident:	rcode_ident.o idmap.o
+	$(CC) $(CFLAGS) -o rcode_ident rcode_ident.o idmap.o -lrtrad
+
 eplus_adduvf.o:	../common/triangulate.h ../common/rtprocess.h \
 ../common/paths.h ../common/rtio.h ../common/random.h \
 ../common/rtmath.h ../common/mat4.h ../common/fvect.h
@@ -268,13 +271,17 @@ pictool.o:	../common/view.h ../common/color.h
 getinfo.o:	../common/rtprocess.h ../common/platform.h ../common/resolu.h
 
 rcode_depth.o depthcodec.o:	depthcodec.h \
-		../common/view.h ../common/fvect.h ../common/resolu.h \
-		../common/rtio.h
+../common/view.h ../common/fvect.h ../common/resolu.h ../common/rtio.h
 
 rcode_depth.o:	../common/platform.h
 
 rcode_norm.o normcodec.o:	normcodec.h \
-		../common/rtmath.h ../common/mat4.h ../common/fvect.h \
-		../common/resolu.h ../common/rtio.h
+../common/rtmath.h ../common/mat4.h ../common/fvect.h \
+../common/resolu.h ../common/rtio.h
 
 rcode_norm.o:	../common/platform.h
+
+rcode_ident.o idmap.o:	idmap.h ../common/resolu.h \
+../common/platform.h ../common/rtio.h
+
+rcode_ident.o:	../common/lookup.h
